attempts to fix homepage background on mobile

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -13,6 +13,7 @@ body {
   background: $bg-clr;
   background-attachment: fixed;
   background-image: url('/blue-paper-bg-vert.jpg');
+  background-size: cover;
   font-family: $font-med;
   height: var(--app-height);
   width: 100%;
